Second commit with sit_in_mngmt

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -135,7 +135,7 @@
         <a href="/information" class="w3-bar-item w3-button"><i class="fas fa-user"></i> Profile</a>
         <a href="/edit" class="w3-bar-item w3-button"><i class="fas fa-edit"></i> Edit</a>
         <a href="/announcement" class="w3-bar-item w3-button"><i class="fas fa-bullhorn"></i> Announcement</a>
-        <a href="/sit_in" class="w3-bar-item w3-button"><i class="fas fa-book"></i> Sit-in Rules</a>
+        <a href="/sit-in" class="w3-bar-item w3-button"><i class="fas fa-book"></i> Sit-in Rules</a>
         <a href="/labrules" class="w3-bar-item w3-button"><i class="fas fa-book-open"></i> Lab Rules and Regulations</a>
         <a href="/sessions" class="w3-bar-item w3-button"><i class="fas fa-clock"></i> Sessions</a>
         <a href="/history" class="w3-bar-item w3-button"><i class="fas fa-history"></i> History</a>
