--- a/templates/labrules.html
+++ b/templates/labrules.html
@@ -27,11 +27,6 @@
             position: relative;
         }
 
-        .container h4 {
-            font-family: "Inter";
-            font-weight: bold;
-        }
-
         img {
             height: 150px;
             width: 150px;
@@ -107,10 +102,15 @@
         .lab-info {
             margin: auto;
             box-sizing: content-box;
-            padding: 10px 0;
-            width: 80%;
+            padding-left: 10px 0;
+            width: 79%;
             height: 75%;
             border: 1px solid #ccc;
+            font-weight: lighter;
+        }
+
+        .sit-in-info p {
+            font-weight: lighter;
         }
 
         .container::after {
@@ -146,44 +146,42 @@
     
     <!-- Page Content -->
     <div style="background-color: #1e7898">
-        <button class="btn" style="background-color: #1e7898;" onclick="w3_open()">☰ Edit </button>
+        <button class="btn" style="background-color: #1e7898;" onclick="w3_open()">☰ Lab Rules </button>
         <div class="w3-container" style="color: white;">
         <h5 style="font-family: 'Inter';"> Laboratory Rules and Regulations <br> </h5>
         </div>
     </div>
 
 <!-- Laboratory Rules Container -->
-<div class="col-head"> Laboratory Rules and Regulations </div>
-    <div class="lab-info" style="font-weight: lighter;">
-        <p style="font-weight: bolder; text-align: center;"> UNIVERSITY OF CEBU - MAIN CAMPUS </p>
+<div class="col-head"> UNIVERSITY OF CEBU - MAIN CAMPUS </div>
+    <div class="lab-info" style="padding-left: 5px;">
         <p style="font-weight: bold; text-align: center;"> College of Information and Computer Studies </p>
         <p><b>LABORATORY RULES AND REGULATIONS<b></p>
-            <p>To avoid embarrassment and maintain camaraderie with your friends and superiors at our laboratories, please observe the following:</p>
-            <p>1. Maintain silence, proper decorum, and discipline inside the laboratory. Mobile phones, walkmans and other personal pieces of equipment must be switched off.</p>
-            <p>2. Games are not allowed inside the lab. This includes computer-related games, card games and other games that may disturb the operation of the lab.</p>
-            <p>3. Surfing the Internet is allowed only with the permission of the instructor. Downloading and installing of software are strictly prohibited.</p>
-            <p>4. Getting access to other websites not related to the course (especially pornographic and illicit sites) is strictly prohibited.</p>
-            <p>5. Deleting computer files and changing the set-up of the computer is a major offense.</p>
-            <p>6. Observe computer time usage carefully. A fifteen-minute allowance is given for each use. Otherwise, the unit will be given to those who wish to "sit-in". </p>
-            <p>7. Observe proper decorum while inside the laboratory.</p>
-            <ul>
-                <li>Do not get inside the lab unless the instructor is present.</li>
-                <li>All bags, knapsacks, and the likes must be deposited at the counter.</li>
-                <li>Follow the seating arrangement of your instructor.</li>
-                <li>At the end of class, all software programs must be closed.</li>
-                <li>Return all chairs to their proper places after using.</li>
-            </ul>
-            <p>8. Chewing gum, eating, drinking, smoking, and other forms of vandalism are prohibited inside the lab.
-            <p>9. Anyone causing a continual disturbance will be asked to leave the lab. Acts or gestures offensive to the members of the community, including public display of physical intimacy, are not tolerated.
-            <p>10. Persons exhibiting hostile or threatening behavior such as yelling, swearing, or disregarding requests made by lab personnel will be asked to leave the lab.
-            <p>11. For serious offense, the lab personnel may call the Civil Security Office (CSU) for assistance.
-            <p>12. Any technical problem or difficulty must be addressed to the laboratory supervisor, student assistant or instructor immediately.
-            <br>
-            <br>
+        <p>To avoid embarrassment and maintain camaraderie with your friends and superiors at our laboratories, please observe the following:</p>
+        <p>1. Maintain silence, proper decorum, and discipline inside the laboratory. Mobile phones, walkmans and other personal pieces of equipment must be switched off.</p>
+        <p>2. Games are not allowed inside the lab. This includes computer-related games, card games and other games that may disturb the operation of the lab.</p>
+        <p>3. Surfing the Internet is allowed only with the permission of the instructor. Downloading and installing of software are strictly prohibited.</p>
+        <p>4. Getting access to other websites not related to the course (especially pornographic and illicit sites) is strictly prohibited.</p>
+        <p>5. Deleting computer files and changing the set-up of the computer is a major offense.</p>
+        <p>6. Observe computer time usage carefully. A fifteen-minute allowance is given for each use. Otherwise, the unit will be given to those who wish to "sit-in". </p>
+        <p>7. Observe proper decorum while inside the laboratory.</p>
+        <ul>
+            <li>Do not get inside the lab unless the instructor is present.</li>
+            <li>All bags, knapsacks, and the likes must be deposited at the counter.</li>
+            <li>Follow the seating arrangement of your instructor.</li>
+            <li>At the end of class, all software programs must be closed.</li>
+            <li>Return all chairs to their proper places after using.</li>
+        </ul>
+        <p>8. Chewing gum, eating, drinking, smoking, and other forms of vandalism are prohibited inside the lab.
+        <p>9. Anyone causing a continual disturbance will be asked to leave the lab. Acts or gestures offensive to the members of the community, including public display of physical intimacy, are not tolerated.
+        <p>10. Persons exhibiting hostile or threatening behavior such as yelling, swearing, or disregarding requests made by lab personnel will be asked to leave the lab.
+        <p>11. For serious offense, the lab personnel may call the Civil Security Office (CSU) for assistance.
+        <p>12. Any technical problem or difficulty must be addressed to the laboratory supervisor, student assistant or instructor immediately.
+        <br>
+        <br>
         <p><b>DISCIPLINARY ACTION</b></p>
-
-            <p>First Offense - The Head or the Dean or OIC recommends to the Guidance Center for a suspension from classes for each offender.</p>
-            <p>Second and Subsequent Offenses - A recommendation for a heavier sanction will be endorsed to the Guidance Center.</p>
+        <p>First Offense - The Head or the Dean or OIC recommends to the Guidance Center for a suspension from classes for each offender.</p>
+        <p>Second and Subsequent Offenses - A recommendation for a heavier sanction will be endorsed to the Guidance Center.</p>
     </div>
 </div>
 
