Third commit with sit_in_mngmt

--- a/templates/labrules.html
+++ b/templates/labrules.html
@@ -109,10 +109,6 @@
             font-weight: lighter;
         }
 
-        .sit-in-info p {
-            font-weight: lighter;
-        }
-
         .container::after {
             content: "";
             clear: both;
@@ -146,7 +142,7 @@
     
     <!-- Page Content -->
     <div style="background-color: #1e7898">
-        <button class="btn" style="background-color: #1e7898;" onclick="w3_open()">☰ Lab Rules </button>
+        <button class="btn" style="background-color: #1e7898;" onclick="w3_open()">☰ LAB RULES </button>
         <div class="w3-container" style="color: white;">
         <h5 style="font-family: 'Inter';"> Laboratory Rules and Regulations <br> </h5>
         </div>
@@ -156,7 +152,7 @@
 <div class="col-head"> UNIVERSITY OF CEBU - MAIN CAMPUS </div>
     <div class="lab-info" style="padding-left: 5px;">
         <p style="font-weight: bold; text-align: center;"> College of Information and Computer Studies </p>
-        <p><b>LABORATORY RULES AND REGULATIONS<b></p>
+        <p>LABORATORY RULES AND REGULATIONS</p>
         <p>To avoid embarrassment and maintain camaraderie with your friends and superiors at our laboratories, please observe the following:</p>
         <p>1. Maintain silence, proper decorum, and discipline inside the laboratory. Mobile phones, walkmans and other personal pieces of equipment must be switched off.</p>
         <p>2. Games are not allowed inside the lab. This includes computer-related games, card games and other games that may disturb the operation of the lab.</p>
