--- a/templates/sit-in.html
+++ b/templates/sit-in.html
@@ -102,16 +102,11 @@
         .sit-in-info {
             margin: auto;
             box-sizing: content-box;
-            padding: 10px 0;
             width: 79%;
             height: 75%;
             border: 1px solid #ccc;
             border-bottom-left-radius: 7px;
             border-bottom-right-radius: 7px;
-        }
-
-        .sit-in-info p {
-            font-weight: lighter;
         }
 
         .container::after {
@@ -147,7 +142,7 @@
     
     <!-- Page Content -->
     <div style="background-color: #1e7898">
-        <button class="btn" style="background-color: #1e7898;" onclick="w3_open()">☰ Sit in Rules </button>
+        <button class="btn" style="background-color: #1e7898;" onclick="w3_open()">☰ SIT IN RULES </button>
         <div class="w3-container" style="color: white;">
         <h5 style="font-family: 'Inter';"> Laboratory Rules and Regulations <br> </h5>
         </div>
@@ -157,7 +152,7 @@
 <div class="col-head"> UNIVERSITY OF CEBU - MAIN CAMPUS </div>
     <div class="sit-in-info" style="padding-left: 5px;">
         <p style="text-align: center; font-weight: bold;"> College of Information and Computer Studies </p>
-        <p><b>LABORATORY SIT-IN RULES AND PROTOCOLS<b></p>
+        <p>LABORATORY SIT-IN RULES AND PROTOCOLS</p>
         <p>1. Sit in will be allowed effectively Midterm period and the only exception is Prelim period.</p>
         <p>2. sit in will only be allowed 15 minutes after the class entered the laboratory and with the permission of the instructor who will be conducting the class once for no classes or vacant hours. Once the instructor is absent, the Laboratory supervisor will decide the students to sit in.</p>
         <p>3. Approach any of the laboratory in-charge (Working Scholar of Laboratory Supevisor) and not the instructor who who conducted the class before getting in.</p>
