--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -90,7 +90,6 @@
     }
 
     .container {
-      font-weight: bold;
       padding-left: 7px;
     }
 
@@ -122,7 +121,9 @@
       margin: 2px;
       padding: 5px 0;
       overflow-y: scroll;
+      width: 33.5%;
       height: 460px;
+      font-weight: lighter;
     }
   </style>
 
@@ -161,14 +162,14 @@
     <div>
       <div class="col-head"> Student Information </div>
         <div class="prof-info">
-        <div class="w3-center">
-          <label for="current_avatar"></label>
-          {% if username.avatar_filename %}
-              <img src="{{ url_for('static', filename='images/uploads/' + username.avatar_filename) }}" alt="Current Avatar">
-          {% else %}
-              <img src="{{ url_for('static', filename='images/uploads/default_avatar.png') }}" alt="Default Avatar">
-          {% endif %}
-        </div>
+          <div class="w3-center">
+            <label for="current_avatar"></label>
+            {% if username.avatar_filename %}
+                <img src="{{ url_for('static', filename='images/uploads/' + username.avatar_filename) }}" alt="Current Avatar">
+            {% else %}
+                <img src="{{ url_for('static', filename='images/uploads/default_avatar.png') }}" alt="Default Avatar">
+            {% endif %}
+          </div>
         <hr>
         <p><b> Name: </b> {{ username.fname }} {{ username.mname }} {{ username.lastname }} </p>
         <p><b> Course: </b> {{ username.course }}</p>
@@ -193,39 +194,38 @@
   </div>
 
   <!-- Laboratory Rules Container -->
-  <div class="column" style="width: 550px">
+  <div class="column" style="width: 34%">
     <div class="col-head"> Laboratory Rules and Regulations </div>
       <div class="container">
-        <div class="lab-info" style="font-weight: lighter; width: 538px;">
-              <p style="font-weight: bolder; text-align: center;"> UNIVERSITY OF CEBU - MAIN CAMPUS </p>
-              <p style="font-weight: bold; text-align: center;"> College of Information and Computer Studies </p>
-              <p><b>LABORATORY RULES AND REGULATIONS<b></p>
-                <p>To avoid embarrassment and maintain camaraderie with your friends and superiors at our laboratories, please observe the following:</p>
-                <p>1. Maintain silence, proper decorum, and discipline inside the laboratory. Mobile phones, walkmans and other personal pieces of equipment must be switched off.</p>
-                <p>2. Games are not allowed inside the lab. This includes computer-related games, card games and other games that may disturb the operation of the lab.</p>
-                <p>3. Surfing the Internet is allowed only with the permission of the instructor. Downloading and installing of software are strictly prohibited.</p>
-                <p>4. Getting access to other websites not related to the course (especially pornographic and illicit sites) is strictly prohibited.</p>
-                <p>5. Deleting computer files and changing the set-up of the computer is a major offense.</p>
-                <p>6. Observe computer time usage carefully. A fifteen-minute allowance is given for each use. Otherwise, the unit will be given to those who wish to "sit-in". </p>
-                <p>7. Observe proper decorum while inside the laboratory.</p>
-                  <ul>
-                    <li>Do not get inside the lab unless the instructor is present.</li>
-                    <li>All bags, knapsacks, and the likes must be deposited at the counter.</li>
-                    <li>Follow the seating arrangement of your instructor.</li>
-                    <li>At the end of class, all software programs must be closed.</li>
-                    <li>Return all chairs to their proper places after using.</li>
-                  </ul>
-                <p>8. Chewing gum, eating, drinking, smoking, and other forms of vandalism are prohibited inside the lab.
-                <p>9. Anyone causing a continual disturbance will be asked to leave the lab. Acts or gestures offensive to the members of the community, including public display of physical intimacy, are not tolerated.
-                <p>10. Persons exhibiting hostile or threatening behavior such as yelling, swearing, or disregarding requests made by lab personnel will be asked to leave the lab.
-                <p>11. For serious offense, the lab personnel may call the Civil Security Office (CSU) for assistance.
-                <p>12. Any technical problem or difficulty must be addressed to the laboratory supervisor, student assistant or instructor immediately.
-                  <br>
-                  <br>
-              <p><b>DISCIPLINARY ACTION</b></p>
+        <div class="lab-info">
+          <p style="font-weight: bold; text-align: center;"> UNIVERSITY OF CEBU - MAIN CAMPUS </p>
+          <p style="font-weight: bold; text-align: center;"> College of Information and Computer Studies </p>
+            <p>To avoid embarrassment and maintain camaraderie with your friends and superiors at our laboratories, please observe the following:</p>
+            <p>1. Maintain silence, proper decorum, and discipline inside the laboratory. Mobile phones, walkmans and other personal pieces of equipment must be switched off.</p>
+            <p>2. Games are not allowed inside the lab. This includes computer-related games, card games and other games that may disturb the operation of the lab.</p>
+            <p>3. Surfing the Internet is allowed only with the permission of the instructor. Downloading and installing of software are strictly prohibited.</p>
+            <p>4. Getting access to other websites not related to the course (especially pornographic and illicit sites) is strictly prohibited.</p>
+            <p>5. Deleting computer files and changing the set-up of the computer is a major offense.</p>
+            <p>6. Observe computer time usage carefully. A fifteen-minute allowance is given for each use. Otherwise, the unit will be given to those who wish to "sit-in". </p>
+            <p>7. Observe proper decorum while inside the laboratory.</p>
+              <ul>
+                <li>Do not get inside the lab unless the instructor is present.</li>
+                <li>All bags, knapsacks, and the likes must be deposited at the counter.</li>
+                <li>Follow the seating arrangement of your instructor.</li>
+                <li>At the end of class, all software programs must be closed.</li>
+                <li>Return all chairs to their proper places after using.</li>
+              </ul>
+            <p>8. Chewing gum, eating, drinking, smoking, and other forms of vandalism are prohibited inside the lab.
+            <p>9. Anyone causing a continual disturbance will be asked to leave the lab. Acts or gestures offensive to the members of the community, including public display of physical intimacy, are not tolerated.
+            <p>10. Persons exhibiting hostile or threatening behavior such as yelling, swearing, or disregarding requests made by lab personnel will be asked to leave the lab.
+            <p>11. For serious offense, the lab personnel may call the Civil Security Office (CSU) for assistance.
+            <p>12. Any technical problem or difficulty must be addressed to the laboratory supervisor, student assistant or instructor immediately.
+              <br>
+              <br>
+            <p style="font-weight: bold;">DISCIPLINARY ACTION</p>
 
-                <p>First Offense - The Head or the Dean or OIC recommends to the Guidance Center for a suspension from classes for each offender.</p>
-                <p>Second and Subsequent Offenses - A recommendation for a heavier sanction will be endorsed to the Guidance Center.</p>
+            <p><u>First Offense </u> - The Head or the Dean or OIC recommends to the Guidance Center for a suspension from classes for each offender.</p>
+            <p><u>Second and Subsequent Offenses</u> - A recommendation for a heavier sanction will be endorsed to the Guidance Center.</p>
           </div>
       </div>
   </div>
