--- a/templates/edit.html
+++ b/templates/edit.html
@@ -152,9 +152,9 @@
     
     <!-- Page Content -->
     <div style="background-color: #1e7898">
-        <button class="btn" style="background-color: #1e7898;" onclick="w3_open()">☰ Edit </button>
+        <button class="btn" style="background-color: #1e7898;" onclick="w3_open()">☰ EDIT </button>
         <div class="w3-container" style="color: white;">
-        <h5 style="font-family: 'Inter';"> EDIT PROFILE <br> </h5>
+        <h5 style="font-family: 'Inter';"> Edit Profile <br> </h5>
         </div>
     </div>
 
