Fourth commit with sit_in_mngmt

--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -150,7 +150,7 @@
 
 <!-- Page Content -->
 <div style="background-color: #1e7898">
-  <button class="btn" style="background-color: #1e7898;" onclick="w3_open()">☰ Dashboard </button>
+  <button class="btn" style="background-color: #1e7898;" onclick="w3_open()">☰ Admin Dashboard </button>
   <div class="w3-container" style="color: white;">
     <h5 style="font-family: 'Inter';"> Welcome, {{ username.fname }} !</h5>
   </div>
