--- a/templates/sit-in.html
+++ b/templates/sit-in.html
@@ -144,7 +144,7 @@
     <div style="background-color: #1e7898">
         <button class="btn" style="background-color: #1e7898;" onclick="w3_open()">☰ SIT IN RULES </button>
         <div class="w3-container" style="color: white;">
-        <h5 style="font-family: 'Inter';"> Laboratory Rules and Regulations <br> </h5>
+        <h5 style="font-family: 'Inter';"> Sit in Rules <br> </h5>
         </div>
     </div>
 
